<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProduct"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:minHeight="48dp"
                android:text="@string/product_id"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtProductId"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/product_id"
                android:textStyle="bold|italic" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/ProductName"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtProductName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/ProductName"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/productDescription"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtProductDis"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/productDescription"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/productPrice"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtProductPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/productPrice"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/productListPrice"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtProductListPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/productListPrice"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/productRetailPrice"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtProductRetailPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/productRetailPrice"
                android:textStyle="bold|italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/category"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtCategory"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/category"
                android:textStyle="bold|italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/dateCreated"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtDateCreated"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="@string/dateCreated"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/dateUpdated"
                android:textStyle="bold|italic"
                android:visibility="visible"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/txtdateUpdated"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:visibility="visible"
                android:hint="@string/dateUpdated"
                android:textStyle="bold|italic" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <Button
        android:id="@+id/btnAddProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:padding="10dp"
        android:text="@string/AddToDB"
        android:visibility="visible" />

</LinearLayout>
</LinearLayout>