<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:id="@+id/linearlayout"
    android:orientation="horizontal">


    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="username"
   />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="208dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="48dp"
        android:ems="10"
        android:hint="password"
         />




    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:layout_marginLeft="248dp"
        android:layout_marginTop="276dp"
        android:text="Click To Register"
       />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="276dp"
        android:layout_weight="20"
        android:text="@string/log_in" />

    <TextView
        android:id="@+id/txtDisplay"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="visible"
       />


</RelativeLayout >
