<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRegisteredUsers"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:minHeight="48dp"
                android:text="ID:"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/txtId"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:fontFamily="sans-serif-black"
                android:hint="id"
                android:textStyle="bold|italic" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Username"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="username"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Password:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="password"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Fullname:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtFullname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="fullname"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Email:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="email"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Date Registered:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtDateRegistered"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="dateRegister"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Date Reviewed:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtDateReviewed"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="dateReviewed"
                android:textStyle="bold|italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Hobbies:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtHobbies"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="hobbies"
                android:textStyle="bold|italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Address:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="address"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Postcode:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtPostcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="postcode"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="Rank:"
                android:textStyle="bold|italic"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/edtRank"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:hint="rank"
                android:textStyle="bold|italic" />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_weight="20"
            android:padding="90dp"
            android:text="Add Item To DB"
            android:visibility="visible" />

    </LinearLayout>
</LinearLayout>